err/wotever.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/wotever'...
Compiling './lib/python3.5/site-packages/wotever/ExcutorMgr.py'...
***   File "./lib/python3.5/site-packages/wotever/ExcutorMgr.py", line 13
    print "\x1b[%dm%s\x1b[0m" % (c, s)
                            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/wotever/filehelper.py'...
***   File "./lib/python3.5/site-packages/wotever/filehelper.py", line 42
    def getLines(filePath):
                          ^
SyntaxError: unexpected EOF while parsing

Compiling './lib/python3.5/site-packages/wotever/logger.py'...
***   File "./lib/python3.5/site-packages/wotever/logger.py", line 9
    print "\x1b[%dm%s %s\x1b[0m" % (c,time.strftime('%Y-%m-%d %H:%M:%S',time.localtime(time.time())), s)
                               ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/wotever/proxy.py'...
***   File "./lib/python3.5/site-packages/wotever/proxy.py", line 39
    print "\t" "connect to %s:%d" % host_port
             ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/wotever-1.619.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
